# bibliotype

./: .dockerignore  .env.example  .gitignore  .prettierrc.json  :w  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CLEANUP_REPORT.md  Dockerfile  GEMINI.md  Procfile  README.md  api_cache.json  check_models.py  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  manage.py  package-lock.json  package.json  pnpm-lock.yaml  progress.txt  pyproject.toml  pyrightconfig.json  requirements.txt  tailwind.config.js  wait-for-postgres.sh
.cursor/: docs.md
bibliotype/: apps.py  asgi.py  celery.py  runner.py  settings.py  urls.py  wsgi.py
bookprint/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  analytics.py  apps.py  book_enrichment_service.py  cache_utils.py  context_processors.py  dna_constants.py  forms.py  management_command_registry.py  models.py  percentile_engine.py  ratelimit_utils.py  tasks.py  turnstile.py  urls.py  utils.py  views.py
csv/: generate_synthetic_test_data.py  generate_test_data.py  goodreads_library_export anya.csv  goodreads_library_export niamh.csv  goodreads_library_export synthetic_contemporary1.csv  goodreads_library_export synthetic_contemporary2.csv  goodreads_library_export synthetic_eclectic1.csv  goodreads_library_export synthetic_eclectic3.csv  goodreads_library_export synthetic_eclectic3_modified.csv  goodreads_library_export synthetic_eclectic4_modified.csv  goodreads_library_export synthetic_eclectic5_modified.csv  goodreads_library_export synthetic_harsh_rater.csv  (+10 more)
docs/: ARCHITECTURE.md  (+3 more)
(+322 files in other folders)
